--- a/app/voice/index.html
+++ b/app/voice/index.html
@@ -11,42 +11,62 @@
   </head>
 
   <body>
-    <h1 class="center" id="headline">
-        Speech Demonstration</h1>
+
+  <div class="body_wrapper">
+    <div class="header">
+      <div class="logo" ><img src="../images/logo.png"></div>
+      <div class="mic_icon">      
+        <button id="start_button">
+          <i class="fa fa-microphone fa-3x" aria-hidden="true"></i>
+        </button>
+      </div>
+    </div>
+
+
     <div id="info">
-      <p id="info_start">Click on the microphone icon and begin speaking.</p>
-      <p id="info_speak_now">Speak now.</p>
-      <p id="info_no_speech">No speech was detected. You may need to adjust your
-        <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
-          microphone settings</a>.</p>
-      <p id="info_no_microphone" style="display:none">
-        No microphone was found. Ensure that a microphone is installed and that
-        <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
-        microphone settings</a> are configured correctly.</p>
-      <p id="info_allow">Click the "Allow" button above to enable your microphone.</p>
-      <p id="info_denied">Permission to use microphone was denied.</p>
-      <p id="info_blocked">Permission to use microphone is blocked. To change,
-        go to chrome://settings/contentExceptions#media-stream</p>
-      <p id="info_upgrade">Web Speech API is not supported by this browser.
-         Upgrade to <a href="//www.google.com/chrome">Chrome</a>
-         version 25 or later.</p>
-    </div>
-    <div class="right">
-      <button id="start_button">
-        <img id="start_img" src="../images/mic.gif" alt="Start"></button>
-    </div>
-    <div id="results">
-      <span id="final_span" class="final"></span>
-      <span id="interim_span" class="interim"></span>
+        <p id="info_start">Click on the microphone icon and begin speaking.</p>
+        <p id="info_speak_now">Speak now.</p>
+        <p id="info_no_speech">No speech was detected. You may need to adjust your
+          <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
+            microphone settings</a>.</p>
+        <p id="info_no_microphone" style="display:none">
+          No microphone was found. Ensure that a microphone is installed and that
+          <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
+          microphone settings</a> are configured correctly.</p>
+        <p id="info_allow">Click the "Allow" button above to enable your microphone.</p>
+        <p id="info_denied">Permission to use microphone was denied.</p>
+        <p id="info_blocked">Permission to use microphone is blocked. To change,
+          go to chrome://settings/contentExceptions#media-stream</p>
+        <p id="info_upgrade">Web Speech API is not supported by this browser.
+           Upgrade to <a href="//www.google.com/chrome">Chrome</a>
+           version 25 or later.</p>
     </div>
 
-    <button class="button" id="play_button" onclick="sendPlay()">Play video
-    </button>
+    <div class="content">
+      <div class="thumbnail" ><img src="../images/images.jpg"></div>
+      <div id="selections">
+<!--         <div>选项</div> -->
+        <div><button type="button" class="btn btn-default btn-lg">谢谢</button></div>
+        <div><button type="button" class="btn btn-default btn-lg">不客气</button></div>
+        <div><button type="button" class="btn btn-default btn-lg">你好</button></div>
+        <div><button type="button" class="btn btn-default btn-lg">还有谁</button></div>
+      </div>
+    </div>
+
+    <div class="btn-groups">
+      <button type="button" class="btn btn-primary">播放</button>
+      <button type="button" class="btn btn-primary">重放</button>
+      <button type="button" class="btn btn-primary">下一段</button>
+      <button type="button" class="btn btn-primary">上一段</button>
+    </div>
+
+<!--       <button class="button" id="play_button" onclick="sendPlay()">Play video
+      </button>
 
 
-    <button class="button" id="replay_button" onclick="sendReplay()">Replay video
-    </button>
-
+      <button class="button" id="replay_button" onclick="sendReplay()">Replay video
+      </button> -->
+  </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="../jquery/dist/jquery.js"></script>  
     <script src="script.js"></script>
