--- a/app/player/index.html
+++ b/app/player/index.html
@@ -8,9 +8,10 @@
     <link rel='stylesheet' href='../bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='../font-awesome/css/font-awesome.min.css' />
     <link rel='stylesheet' href='style.css' />
+     <script type="text/javascript" ref='script.js'></script>
   </head>
   <body>
-    <div>
+    <div class="div_hide">
     <ul id="messages">
       
       <li>Command list
@@ -24,7 +25,7 @@
 
     Your browser does not support HTML5 video.
     </video>
-    <button onclick="play()">play</button>
+    <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">fullScreen</button>
 
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="../jquery/dist/jquery.js"></script>  
