--- a/app/voice/index.html
+++ b/app/voice/index.html
@@ -44,23 +44,17 @@
 
     <div class="content">
       <div class="thumbnail" ><img src="../images/images.jpg"></div>
-      <div id="selections">
-<!--         <div>选项</div> -->
-        <div><button type="button" class="btn btn-default btn-lg">谢谢</button></div>
-        <div><button type="button" class="btn btn-default btn-lg">不客气</button></div>
-        <div><button type="button" class="btn btn-default btn-lg">你好</button></div>
-        <div><button type="button" class="btn btn-default btn-lg">还有谁</button></div>
-      </div>
-      <div id="continue">
-      </div>
+      <div id="selections"></div>
+      <div id="continue"></div>
     </div>
 
     <div class="btn-groups">
+      <button type="button" class="btn btn-primary btn-lg" value="question1">开始视频</button>
       <button type="button" class="btn btn-primary btn-lg" value="normalall">正常速度</button>
       <button type="button" class="btn btn-primary btn-lg" value="slowall">慢速</button>
       <button type="button" class="btn btn-primary btn-lg" value="superslowall">超慢速</button>
-    </div>
 
+    </div>
   </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="../jquery/dist/jquery.js"></script>  
