--- a/app/voice/index.html
+++ b/app/voice/index.html
@@ -45,7 +45,7 @@
     <div class="content">
       <div class="thumbnail" ><img src="../images/images.jpg"></div>
       <div id="selections"></div>
-      <div id="continue"></div>
+      <div id="continue_button"></div>
     </div>
 
     <div class="btn-groups">
