--- a/app/player/index.html
+++ b/app/player/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Web Speech API Demo</title>
+    <title>HYSK</title>
     <!-- CSS File -->
     <link rel='stylesheet' href='../bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='../font-awesome/css/font-awesome.min.css' />
