--- a/app/player/index.html
+++ b/app/player/index.html
@@ -25,8 +25,9 @@
 
     Your browser does not support HTML5 video.
     </video>
-    <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">fullScreen</button>
-
+    <div>
+    <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">全屏</button>
+    </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="../jquery/dist/jquery.js"></script>  
     <script src="script.js"></script>
