--- a/app/study/index.html
+++ b/app/study/index.html
@@ -35,6 +35,7 @@
       <button type="button" class="btn btn-primary btn-lg" value="play">播放</button>
       <button type="button" class="btn btn-primary btn-lg" value="pause">暂停</button>
       <button type="button" class="btn btn-primary btn-lg" value="replay">重放</button>
+      <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">全屏</button>   
     </div>
   </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
