--- a/app/voice/index.html
+++ b/app/voice/index.html
@@ -52,6 +52,7 @@
       <button type="button" class="btn btn-primary btn-lg" value="play:question1">开始视频</button>
       <button type="button" class="btn btn-primary btn-lg" name="previous" value="previous"></button>
       <button type="button" class="btn btn-primary btn-lg" name="next" value="next"></button>
+      <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">全屏</button>
     </div>
   </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
