--- a/app/player/index.html
+++ b/app/player/index.html
@@ -21,7 +21,7 @@
 
 
     <video width="400" controls id='myplayer'>
-    <source src="../video/black_bg_w_props.mp4" type="video/mp4">
+    <source src="../video/normal.mp4" type="video/mp4">
 
     Your browser does not support HTML5 video.
     </video>
