--- a/app/study/index.html
+++ b/app/study/index.html
@@ -7,7 +7,7 @@
     <!-- CSS File -->
     <link rel='stylesheet' href='../bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='../font-awesome/css/font-awesome.min.css' />
-    <link rel='stylesheet' href='style.css' />
+    <link rel='stylesheet' href='../voice/style.css' />
   </head>
 
   <body>
@@ -16,30 +16,8 @@
     <div class="header">
       <div class="logo" ><img src="../images/logo.png"></div>
       <div class="mic_icon">      
-        <button id="start_button">
-          <i class="fa fa-microphone fa-3x" aria-hidden="true"></i>
-        </button>
+        <a href="/"><button type="button" class="btn btn-default">Back</button></a>
       </div>
-    </div>
-
-
-    <div id="info">
-        <p id="info_start">Click on the microphone icon and begin speaking.</p>
-        <p id="info_speak_now">Speak now.</p>
-        <p id="info_no_speech">No speech was detected. You may need to adjust your
-          <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
-            microphone settings</a>.</p>
-        <p id="info_no_microphone" style="display:none">
-          No microphone was found. Ensure that a microphone is installed and that
-          <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
-          microphone settings</a> are configured correctly.</p>
-        <p id="info_allow">Click the "Allow" button above to enable your microphone.</p>
-        <p id="info_denied">Permission to use microphone was denied.</p>
-        <p id="info_blocked">Permission to use microphone is blocked. To change,
-          go to chrome://settings/contentExceptions#media-stream</p>
-        <p id="info_upgrade">Web Speech API is not supported by this browser.
-           Upgrade to <a href="//www.google.com/chrome">Chrome</a>
-           version 25 or later.</p>
     </div>
 
     <div class="content">
@@ -62,15 +40,5 @@
   </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="../jquery/dist/jquery.js"></script>  
-    <script src="script.js"></script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
