--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,6 @@
       <div class="logo" ><img src="../images/logo.png"></div>
       <div class="mic_icon">      
         <button id="start_button">
-          <i class="fa fa-microphone fa-3x" aria-hidden="true"></i>
         </button>
       </div>
     </div>
@@ -27,8 +26,8 @@
       <div id="selections">
         
         <div><a href="/study"><button type="button" class="btn btn-primary btn-lg" value="play">学习模式</button></a></div>
-        <div><a href="/voice"><button type="button" class="btn btn-primary btn-lg" value="pause">xx模式1</button></div>
-        <div><a href="/voice"><button type="button" class="btn btn-primary btn-lg" value="replay">xx模式2</button></div>
+        <div><a href="/voice"><button type="button" class="btn btn-primary btn-lg" value="pause">语音选答案</button></div>
+        <div><a href="/dialog"><button type="button" class="btn btn-primary btn-lg" value="replay">互动语音对话</button></div>
 
       </div>
     </div>
