--- a/app/dialog/index.html
+++ b/app/dialog/index.html
@@ -16,15 +16,13 @@
     <div class="header">
       <div class="logo" ><img src="../images/logo.png"></div>
       <div class="mic_icon">      
-        <button id="start_button">
-          <i class="fa fa-microphone fa-3x" aria-hidden="true"></i>
-        </button>
+        <a href="/"><button type="button" class="btn btn-default">Back</button></a>
       </div>
     </div>
 
 
     <div id="info">
-        <p id="info_start">Click on the microphone icon and begin speaking.</p>
+        <p id="info_start">When Video is stop, please speak.</p>
         <p id="info_speak_now">Speak now.</p>
         <p id="info_no_speech">No speech was detected. You may need to adjust your
           <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
