--- a/app/dialog/index.html
+++ b/app/dialog/index.html
@@ -14,9 +14,8 @@
 
   <div class="body_wrapper">
     <div class="header">
-      <div class="logo" ><img src="../images/logo.png"></div>
+      <div class="logo" ><a href="/"><img src="../images/logo.png"></a></div>
       <div class="mic_icon">      
-        <a href="/"><button type="button" class="btn btn-default">Back</button></a>
       </div>
     </div>
 
