--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 
   <div class="body_wrapper">
     <div class="header">
-      <div class="logo" ><img src="../images/logo.png"></div>
+      <div class="logo" ><a href="/"><img src="../images/logo.png"></a></div>
       <div class="mic_icon">      
         <button id="start_button">
         </button>
@@ -52,13 +52,13 @@
             <div class="tab-content">
 
               <div role="tabpanel" class="tab-pane active" id="home">
-                <form action="/post_move">
+                <form action="/api/movie" method="post" class="form_movie">
 
                 </form>
               </div>
 
               <div role="tabpanel" class="tab-pane" id="profile">
-                <form action="/post_move">
+                <form action="/api/question" method="post" class="form_question">
                   <div>
                   </div>
                 </form>
@@ -77,11 +77,7 @@
   </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="../jquery/dist/jquery.js"></script>
-    <script src='../bootstrap/dist/js/bootstrap.min.js' />
-    <script>
-    $('document').ready(function(){
-      $('#myModal').modal()  
-    })
-    </script>
+    <script src='../bootstrap/dist/js/bootstrap.min.js'></script>
+    <script src='index.js'></script>
   </body>
 </html>
