--- a/app/voice/index.html
+++ b/app/voice/index.html
@@ -14,7 +14,7 @@
 
   <div class="body_wrapper">
     <div class="header">
-      <div class="logo" ><img src="../images/logo.png"></div>
+      <div class="logo" ><a href="/"><img src="../images/logo.png"></a></div>
       <div class="mic_icon">      
         <button id="start_button">
           <i class="fa fa-microphone fa-3x" aria-hidden="true"></i>
