--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,6 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="../jquery/dist/jquery.js"></script>
     <script src='../bootstrap/dist/js/bootstrap.min.js'></script>
-    <script src='index.js'></script>
+    <script src='script.js'></script>
   </body>
 </html>
