add open player link

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,8 @@
         <div><a href="/study"><button type="button" class="btn btn-primary btn-lg" value="play">学习模式</button></a></div>
         <div><a href="/voice"><button type="button" class="btn btn-primary btn-lg" value="pause">语音选答案</button></a></div>
         <div><a href="/dialog"><button type="button" class="btn btn-primary btn-lg" value="replay">互动语音对话</button></a></div>
+
+        <div><a href="/player" target="_blank"><button type="button" class="btn btn-danger btn-lg">打开播放页面</button></a></div>
         <!-- Button trigger modal -->
         <div><button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal">配置</button></div>
       </div>
