--- a/app/study/index.html
+++ b/app/study/index.html
@@ -38,6 +38,7 @@
     </div>
   </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="../jquery/dist/jquery.js"></script>  
+    <script src="../jquery/dist/jquery.js"></script> 
+    <script src="script.js"></script>  
   </body>
 </html>
