--- a/app/dialog/index.html
+++ b/app/dialog/index.html
@@ -47,6 +47,8 @@
 
     <div class="btn-groups">
       <button type="button" class="btn btn-primary btn-lg" value="play:question1">开始视频</button>
+      <button type="button" class="btn btn-primary btn-lg" name="previous" value="previous"></button>
+      <button type="button" class="btn btn-primary btn-lg" name="next" value="next"></button>
     </div>
   </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
