--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 
   <div class="body_wrapper" id='main'>
     <div class="header">
-      <div class="logo" ><a href="/"><img src="../images/logo.png"></a></div>
+      <div class="logo" ><a href="/"><img width = '150px' height = '100px' src="../images/logo.png"> <p class ='logo_text'>Main Menu</p></a></div>
       <div class="mic_icon">      
         <button id="start_button">
         </button>
@@ -25,13 +25,13 @@
       <div class="thumbnail" ><img src="../images/images.jpg"></div>
       <div id="selections">
         
-        <div><a href="/study"><button type="button" class="btn btn-primary btn-lg" value="play">学习模式</button></a></div>
-        <div><a href="/voice"><button type="button" class="btn btn-primary btn-lg" value="pause">语音选答案</button></a></div>
-        <div><a href="/dialog"><button type="button" class="btn btn-primary btn-lg" value="replay">互动语音对话</button></a></div>
-
-        <div><a href="/player" target="_blank"><button type="button" class="btn btn-danger btn-lg">打开播放页面</button></a></div>
+        <div><a href="/study"><button type="button" class="btn btn-primary btn-lg" value="play">学一学 (Learn to Speak)</button></a></div>
+        <div><a href="/voice"><button type="button" class="btn btn-primary btn-lg" value="pause">练一练 (Practice to Speak)</button></a></div>
+        <div><a href="/dialog"><button type="button" class="btn btn-primary btn-lg" value="replay">试一试 (Try to Speak)</button></a></div>
+        <div><a href="/ftest"><button type="button" class="btn btn-primary btn-lg" value="replay">考一考 (Test your studying)</button></a></div>
+        <div><a href="/player" target="_blank"><button type="button" class="btn btn-danger btn-lg hide">打开播放页面</button></a></div>
         <!-- Button trigger modal -->
-        <div><button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#myModal">配置</button></div>
+        <div><button type="button" class="btn btn-danger btn-lg hide" data-toggle="modal" data-target="#myModal">配置</button></div>
         <div> <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">全屏</button></div>
       </div>
     </div>
