--- a/app/ftest/index.html
+++ b/app/ftest/index.html
@@ -45,7 +45,9 @@
 
     <div class="content">
       <div class="thumbnail" ><img src="../images/images.jpg"></div>
-      <div id="selections"></div>
+      <div id="selections">
+          <div id='test_result'>Score</div>
+      </div>
       <div id="continue_button"></div>
     </div>
 
