--- a/app/player/index.html
+++ b/app/player/index.html
@@ -21,12 +21,13 @@
 
 
     <video width="400" controls id='myplayer'>
-    <source src="../video/full_video/normal_revised.mp4" type="video/mp4">
+    <source src="../video/full_video/normal_with_right_wrong.mp4" type="video/mp4">
 
     Your browser does not support HTML5 video.
     </video>
     <div>
     <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">全屏</button>
+    <button  id = 'test_btn' class="btn btn-primary btn-lg hide">test</button>
     </div>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="../jquery/dist/jquery.js"></script>  
