--- a/app/player/index.html
+++ b/app/player/index.html
@@ -25,6 +25,9 @@
 
     Your browser does not support HTML5 video.
     </video>
+    <div class="overlay hide" id='overlayid'>
+      Speak Now
+    </div>
     <div>
     <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">全屏</button>
     <button  id = 'test_btn' class="btn btn-primary btn-lg hide">test</button>
