--- a/app/debug/index.html
+++ b/app/debug/index.html
@@ -18,16 +18,27 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="../commio.js"></script>
     <script>
+    if (sessionStorage.getItem('scene_name') == null) {
+      sessionStorage.setItem('isDebugMode', 'true');
+      location.href = '/';
+      return;
+     }
       var socket = io();
+      var roomName = getChannelName();
+      if(roomName!='') {
+        socket.emit('join', roomName);
+      }
+
       $('form').submit(function(){
-        socket.emit('chat message', $('#m').val());
+        socket.emit('chat', msgWrapper($('#m').val()));
         $('#m').val('');
         return false;
       });
-      socket.on('chat message', function(msg){
+      socket.on('chat', function(msg){
         $('#messages').append($('<li>').text(msg));
       });
     </script>
