--- a/app/ftest/index.html
+++ b/app/ftest/index.html
@@ -56,8 +56,9 @@
       <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">全屏</button>
     </div>
   </div>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="../jquery/dist/jquery.js"></script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="../commio.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
