--- a/app/config/index.html
+++ b/app/config/index.html
@@ -49,13 +49,13 @@
             <div class="tab-content">
 
               <div role="tabpanel" class="tab-pane active" id="home">
-                <form action="/api/movie" method="post" class="form_movie">
+                <form  class="form_movie">
                 </form>
                 <div><input type="submit" id="submit_movie"></div>
               </div>
 
               <div role="tabpanel" class="tab-pane" id="profile">
-                <form action="/api/question" method="post" class="form_question">
+                <form  class="form_question">
                   
                 </form>
 
@@ -75,7 +75,6 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="../jquery/dist/jquery.js"></script>
     <script src='../bootstrap/dist/js/bootstrap.min.js'></script>
-    <script src='../jquery-serialize-object/dist/jquery.serialize-object.min.js'></script>
     <script src='../script.js'></script>
   </body>
 </html>
