--- a/app/player/index.html
+++ b/app/player/index.html
@@ -21,7 +21,7 @@
 
 
     <video width="400" controls id='myplayer'>
-    <source src="../video/full_video/normal_with_right_wrong.mp4" type="video/mp4">
+    <source src="" type="video/mp4">
 
     Your browser does not support HTML5 video.
     </video>
@@ -29,12 +29,13 @@
       Speak Now
     </div>
     <div>
-    <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">全屏</button>
+    <button onclick="fullScreen()" id = 'fullscreen_btn' class="btn btn-primary btn-lg">Full Screen</button>
     <button  id = 'test_btn' class="btn btn-primary btn-lg hide">test</button>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="../commio.js"></script>  
     <script src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>  
   </body>
 </html>
