--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
           </ul>
         </div>
         <div class="classroom_div">
-         <label>Class room Number:</label><input id='classroom_number' type="number"  value="1"></input></div>
+         <label hidden="true">Class room Number:</label><input id='classroom_number' type="number"  value="1" hidden="true"></input></div>
          </div>
       <div id="scene_selections_chinese_div" hidden="true" class="scene_selections_div">
         <div class="dropdown">
