--- a/app/study/index.html
+++ b/app/study/index.html
@@ -55,7 +55,7 @@
             $scope.replay="重放";
             $scope.pause="暂停";
           }
-          if(sessionStorage.getItem('lang_name') == 'chinese') {
+          if(sessionStorage.getItem('lang_name') == 'english') {
             $scope.startText= "Play";
             $scope.fullScreen= "Full Screen";
             $scope.normalSpeed= "Normal";
