--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,8 @@
             <li data-value="store_english_bengci"><a href="#">Store(bengci)</a></li>
             <li data-value="restaurant_english"><a href="#">Restaurant</a></li>
             <li data-value="restaurant_english_bengci"><a href="#">Restaurant(bengci）</a></li>
+            <li data-value="wenlu_english"><a href="#">Ask the way</a></li>
+            <li data-value="wenlu_english_bengci"><a href="#">Ask the way(bengci）</a></li>
           </ul>
         </div>
         <div class="classroom_div">
@@ -56,6 +58,8 @@
             <li data-value="store_chinese_bengci"><a href="#">商店（蹦词版）</a></li>
             <li data-value="restaurant_chinese"><a href="#">餐馆</a></li>
             <li data-value="restaurant_chinese_bengci"><a href="#">餐馆 （蹦词版）</a></li>
+            <li data-value="wenlu_chinese"><a href="#">问路</a></li>
+            <li data-value="wenlu_chinese_bengci"><a href="#">问路 （蹦词版）</a></li>
           </ul>
         </div>
         <div class="classroom_div">
